Fixed some button sizes to look better on mobile

--- a/src/Game.css
+++ b/src/Game.css
@@ -4,9 +4,9 @@
 
 .gameButton {
     font-weight: bold;
-    width: min(8vw, 80px);
+    width: min(12vw, 80px);
     height: 5vh;
-    font-size: min(2vw, 20px);
+    font-size: min(3vw, 20px);
 }
 
 .darkBlue {
